test/bad/undefined_query.veld
// BAD: undefined query type in action
model User { id: string }
model Input { name: string }

module Test {
  action List {
    method:  GET
    path:    /test
    query:   FakeFilters
    output:  User
  }
}
